[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "llama_tools"  # Name of the directory containing your Python code
author = "Yingbei Tong"
author-email = "yingbei@acorn.io"
home-page = "https://yourpackage.example.com"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description-file = "README.md"
keywords = "llama, function-call"
license = "MIT"

# Dependencies that your package needs
requires = [

]
